        - Removed Gadget::isVisible().
        - Added Gadget::enableDrawing().
        - Added Gadget::disableDrawing().
        - Added Gadget::drawingEnabled().
        - Gadget::drawingEnabled() only returns true if the gadget is not hidden
          or deleted.
        - GraphicsPort drawing methods do not check Gadget::isDeleted() as it
          is checked in drawingEnabled().
  
  - New Features:
     - Added ScrollingTextBox class.
     - Added bonus code folder.
     - Moved LinkedList and LinkedListIterator classes from main codebase into
       bonus folder.
     - Added getPreferredDimensions() to Gadget and Textbox classes.
     - Moved header includes from woopsi.h to new woopsiheaders.h to allow
       more streamlined binaries.
     - Added Gadget::remove() and Gadget::removeChild() methods.
     - Started ContextMenu and ContextMenuItem classes.
     - Added Gadget "hidden" flag to more accurately identify if a gadget has
       been hidden.
     - Added Gadget::isHidden() method.


  V0.30 (20080326)

  - Fixes:
     - Removed EventHandler inheritance from Gadget.
     - Added EventHandler inheritance to AmigaScreen and SkinnedScreen.
     - Minor optimisation in TextBox click() and release() functions.
     - Added more DMA_Active() checks to fix SuperBitmap DMA problems.
     - Made EventHandler an abstract class.
     - Removed post-DMA waits.
     - Added cache flushing to fix empty pixels when using DMA hardware.
     - Fixed incorrect vector pointer in Gadget::moveHiddenToChildList().
     - Font::scanGlyph() no longer scans past the end of its bitmap's memory.
     - Tidied up Debug class.
     - Added javadoc comments to more files.
     - Swapped ScrollingPanel and ScrollableBase to use a more logical model
       of the scrolling region.
     - Made Gadget::getX() and Gadget::getY() const.
     - Fixed SliderVertical bugs.
     - Added scrollbar to Debug GUI.
     - Fixed incorrect line count in Text::wrap() function.